@@ -59,6 +59,7 @@ Changes in 2.8
 - Food Service icons: correct path & limit to image files in MenuItems.php
 - CSS hack: Replace the modules icons in CSS trick in themes/README
 - show 80 previous years instead of 20 in Date.php
+- Bugfix SQL bug for user autos field when add values found in current and previous year in Search.fnc.php
 
 Upgrade from 2.7.x
 ------------------
